# openapi-specs/openapi.json
@@ -208,6 +208,37 @@
             }
           }
         }
+      },
+      "put": {
+        "tags": [
+          "Members"
+        ],
+        "operationId": "Members_UpdateMember",
+        "requestBody": {
+          "x-name": "request",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/MemberUpdateRequest"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/api/Members/{id}": {
